k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transcoder
  labels:
    app.kubernetes.io/part-of: transcoder
